# cocoa-model

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  NOTICE.md  README.md  docker-compose.observability.yml  dvc.yaml  params.yaml  pyproject.toml  railway.toml  requirements.txt  resilient-cocoa-model.code-workspace
.github/workflows/: build-image.yml  cd-staging.yml  ci.yml  license-boundary.yml  loadtest_nightly.yml  quality_gates.yml  typecheck.yml
config/: ensemble_weights.yaml  ensemble_weights_v3.yaml  ensemble_weights_v4.yaml  eudr_country_risk.yaml  phenology.yaml  process_bma_weights.json  quality_premiums.yaml  tsfm_weights.yaml
config/casej/: params.yaml
config/training/: yield.yaml
data/processed/: farm_registry.parquet
data/raw/: cocoa_aoi.geojson
docs/: ACTIVE_LEARNING_RUNBOOK.md  ARCHITECTURE.md  CALIBRATION_GUIDE.md  CANOPY_FEATURES.md  CAUSAL_DISCOVERY.md  CMIP_MIGRATION.md  INSURANCE_PRODUCT.md  INTERPRETABILITY.md  LICENSES.md  MLOPS_RUNBOOK.md  MODEL_CARD.md  QUALITY_MODEL.md  REGULATORY_MAPPING.md  RUNBOOK_INCIDENTS.md  SLOS.md  TRAINING_RUNBOOK.md  TYPING_PLAYBOOK.md  VALIDATION_PROTOCOL.md  agrifm_ensemble_v2_compute.md  conformal_calibration.md  corrdiff_compute.md  ensemble_v3_compute.md  galileo_migration.md  mediation_analysis.md  neuralgcm_evaluation.md  policy_targeting.md  sensitivity.md  tsfm_compute.md
docs/data/: gswp3_w5e5.md
docs/licensing/: ATTRICI_GPL_BOUNDARY.md  CLAY_APACHE.md  NGBOOST_APACHE.md  OBSERVABILITY_APACHE.md  OLMOEARTH_APACHE.md  PROPERSCORING_SCORINGRULES.md  SCIKIT_GSTAT_BSD.md
grafana/dashboards/: api_overview.json  business_kpis.json  model_performance.json
observability/prometheus/: alerts.yml  prometheus.yml
reports/: fdp_calibration_2026-05-20.md
reports/backbones/: benchmark_2026-05-20.md  benchmark_aef_2026-05-20.md  comparison_2026-05-22.md  olmoearth_vs_v3_2026-05-22.md
reports/causal/: dag_validation_2026-05-24.md  discovered_dag_latest.json  ngboost_vs_hgb_dml_2026-05-22.md
reports/demo/: README.md
reports/scenario/: aurora_vs_neuralgcm_vs_corrdiff.md  neuralgcm_vs_corrdiff_2026-05-22.md
reports/sensitivity/: dvds_validation_2026-05-21.md
reports/training/: lora_vs_full_20260524.md
scripts/: __init__.py  attrici_cli_shim.py  benchmark_backbones.py  benchmark_lora_vs_full_finetune.py  benchmark_tsfm.py  calibrate_fdp_threshold.py  calibrate_online_conformal.py  check_no_prints.py  compare_dml_nuisances.py  demo_end_to_end.py  download_agrifm_weights.py  download_clay_weights.py  download_corrdiff_checkpoint.py  download_olmoearth_weights.py  export_conformal_replication_fixtures.py  fit_ensemble_v2_weights.py  fit_ensemble_v3_weights.py  fit_ensemble_v4_weights.py  fit_process_bma_weights.py  generate_casej_training_set.py  generate_causal_report.py  generate_mpdta_fixture.py  generate_prop99_fixture.py  generate_synthetic_cooperative_panel.py  ingest_cmip7_when_available.py  ingest_gee.py  init_project.sh  learn_targeting_rules.py  mypy_discover_gradual.py  mypy_strict_ratchet.py  mypy_typing_config.py  plot_reliability.py  precompute_feature_cache.py  promote_champion.sh  promotion_gate_backbone.py  push_calibration_metrics.py  register_checkpoint.py  run_active_learning_loop.py  run_attrici.py  run_attrici_civ_ghana.py  (+30 more)
src/: __init__.py
src/analysis/: __init__.py  _report.py  _staggered_did_common.py  bjs_imputation.py  causal_discovery.py  climate_attribution.py  csdid.py  did_comparison_harness.py  did_impact.py  dvds.py  heterogeneity.py  mediation.py  parallel_trends.py  policy_targeting.py  psm_matching.py  run_evaluation.py  sensitivity.py  synthdid.py  tcav.py  teleconnections_pcmci.py  validate_parallel_trends.py  validate_smd.py
src/api/: causal_sensitivity.py  config.py  cqr_loader.py  drift_monitoring.py  eudr.py  feature_resolver.py  financial.py  geo_mock.py  interpret.py  main.py  mediation.py  metrics.py  model_loader.py  observability_middleware.py  online_conformal_store.py  scenario_conformal.py  schemas.py  simulation.py  telemetry.py
src/common/: __init__.py  logging.py
src/compliance/: __init__.py  eudr.py
src/counterfactual/: __init__.py  ace2_era5_runner.py  attrici_runner.py  aurora_runner.py  cmip6_scenarios.py  cmip7_scenarios.py  cmip_factory.py  cmip_scenarios_base.py  corrdiff_downscaler.py  delta_downscaler.py  neuralgcm_runner.py
src/data/: __init__.py  agromet.py  alphaearth_embeddings.py  attrici_counterfactual.py  attrici_fast_detrend.py  cmip6_ingest.py  cmip6_schema_index.py  cocoa_dataset.py  cocoa_exposure.py  cssvd_landscape_features.py  cssvd_strain_atlas.py  dumont_supplement.py  ensemble_weights.py  era5_ingest.py  farm_panel.py  farm_panel_loader.py  feature_store.py  field_boundaries.py  gedi_canopy.py  gedi_ingest.py  gee_auth.py  pipeline_stubs.py  schemas.py  sentinel_composite.py  smap_ingest.py  soil_ingest.py  spatial_splits.py  teleconnection_ingest.py  utils.py  whisp_client.py  yield_panel.py
src/finance/: __init__.py  insurance.py  parametric_insurance.py  pricing.py
src/hazards/: __init__.py  black_pod.py  composite.py  (+3 more)
tests/: conformal_online_helpers.py  conftest.py  test_aci.py  test_agrifm_backbone.py  test_agrifm_cocoa_training.py  test_aipw_ngboost.py  test_almanac_runner.py  test_api.py  test_api_auth_cors.py  test_api_scenario.py  test_api_scenario_aurora.py  test_api_scenario_corrdiff.py  test_api_scenario_online.py  test_api_simulate.py  test_api_simulate_sensitivity.py  test_attrici_counterfactual.py  test_attrici_runner.py  test_benchmark_backbones.py  test_bjs.py  test_case2_runner.py  test_casej_surrogate.py  test_climate_attribution.py  test_cmip6_ingest.py  test_cmip_factory.py  test_cocoa_dataset.py  test_cocoa_exposure.py  test_cocoa_exposure_threshold.py  test_conformal.py  test_conformal_pid.py  test_corrdiff_downscaler.py  test_cqr.py  test_csdid.py  test_delta_downscaler.py  test_demo_end_to_end.py  test_did_comparison_harness.py  test_did_impact.py  test_drift_store.py  test_dvds.py  test_eci.py  test_ensemble_surrogate.py  (+50 more)
(+174 files in other folders)
