[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-cocoa-model"
version = "0.3.0"
description = "Geospatial machine learning for resilient cocoa modeling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Resilient World" }]
dependencies = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "xarray>=2024.1",
    "xee>=0.0.15",
    "zarr>=2.17",
    "dask[array]>=2024.1",
    "numpy>=1.26",
    "netcdf4>=1.6",
    "earthengine-api>=0.1.390",
    "torch>=2.1",
    "torch-geometric>=2.5",
    "pytorch-lightning>=2.1",
    "huggingface_hub>=0.24",
    "einops>=0.7",
    "timm>=1.0.11",
    "torchgeo>=0.5",
    "terratorch>=0.1",
    "mlflow>=2.10",
    "dvc>=3.0",
    "scikit-learn>=1.3",  # HistGradientBoosting + early stopping (PSM/DML)
    "scikit-survival>=0.22",  # CoxBoost-style CSSVD landscape survival model
    "joblib>=1.3",
    "pandas>=2.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "shapely>=2.0",
    "pycountry>=24.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3",
    "diskcache>=5.6",
    "h3>=4.0",
    "statsmodels>=0.14",  # event-study OLS with cluster-robust SEs
    "linearmodels>=6.0",  # PanelOLS for BJS imputation staggered DiD
    "cvxpy>=1.5",  # Synthetic DiD simplex QPs (Apache-2.0)
    "econml>=0.15",  # Honest causal forest / DR-learner CATE (MIT)
    "shap>=0.45",  # Optional CATE feature attribution
    "pooch>=1.8",
    "requests>=2.31",
    "xesmf>=0.8",
    "rpy2>=3.5; platform_system != 'Windows'",
    "segmentation-models-pytorch>=0.3",
    "structlog>=24.1",
    "pandera[pandas]>=0.20",
    "scikit-gstat>=1.0",
    "pyproj>=3.6",
    "galileo @ git+https://github.com/nasaharvest/galileo@main; python_version < '3.12'",
]

[project.optional-dependencies]
gee = [
    "geemap>=0.30",
]
# Process-based crop models: CASE2 (rpy2) + ALMANAC (subprocess; stdlib only)
process = [
    "rpy2>=3.5",
]
mlops = [
    "optuna>=3.6",
]
dev = [
    "pytest>=8.0",
    "optuna>=3.6",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
    "pandas-stubs>=2.1",
    "types-PyYAML>=6.0",
    "types-shapely>=2.0",
    "scipy-stubs>=2.0",
    "types-redis>=4.6",
    "ipython>=8.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
]
# ATTRICI is GPLv3 — subprocess-only in src/; install for integration tests only
attrici = [
    "attrici @ git+https://github.com/ISI-MIP/attrici.git@v2.0.1",
]
# Fields of The World parcel delineation (subprocess CLI boundary)
ftw = [
    "ftw-tools>=2.0.0b5",
    "rasterstats>=0.20",
    "geopandas>=0.14",
]
# Upstream Galileo (Python >=3.10,<3.12 only); on 3.12+ use vendored models.vendor.*
galileo = [
    "galileo @ git+https://github.com/nasaharvest/galileo@main",
]
# AgriFM Video Swin backbone (timm in core deps; weights via scripts/download_agrifm_weights.py)
agrifm = []
# TerraMind 1.0 (IBM-ESA Apache-2.0) + TiM token generation
terramind = [
    "terratorch>=1.2.4",
    "diffusers==0.30.0",
]
# CorrDiff-CMIP6 km-scale downscaling (NVIDIA Modulus / Earth2Studio, Apache-2.0)
corrdiff = [
    "nvidia-modulus[earth2studio]>=1.0",
    "nvidia-earth2studio[corrdiff]>=0.8",
]

# Optional extensions:
# differences>=0.2.0

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "common*",
    "data*",
    "hazards*",
    "models*",
    "api*",
    "monitoring*",
    "training*",
    "analysis*",
    "counterfactual*",
    "compliance*",
    "validation*",
    "registry*",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
exclude = ["\\.venv", "^tests/"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "diskcache.*",
    "h3.*",
    "redis.*",
    "zarr",
    "zarr.*",
    "xarray.*",
    "statsmodels",
    "statsmodels.*",
    "lightning.*",
    "lightning.pytorch.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "torchgeo.*",
    "terratorch.*",
    "attrici.*",
    "ee.*",
    "earthengine.*",
    "geemap.*",
    "xee.*",
    "galileo.*",
    "segmentation_models_pytorch.*",
    "econml.*",
    "rpy2.*",
    "sklearn.*",
    "cvxpy.*",
    "linearmodels.*",
    "shap.*",
    "torch_geometric.*",
    "timm.*",
    "diffusers.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "models.*",
    "models.*.*",
    "api.*",
    "analysis.*",
    "monitoring.*",
    "compliance.*",
    "finance.*",
    "training.*",
    "data.*",
    "counterfactual.*",
    "hazards.*",
    "validation.*",
]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that call Google Earth Engine (require credentials)",
    "slow: downloads Galileo weights or runs encoder forward pass",
    "slow: AgriFM Video Swin forward (depth-18 stage)",
    "terramind: TerraMind / TerraTorch registry forward or HF download",
    "gpu: CorrDiff / Earth2Studio integration (requires GPU and [corrdiff] extra)",
    "slow: DR policy tree bootstrap or simulation loops",
]
