[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-cocoa-model"
version = "0.3.0"
description = "Geospatial machine learning for resilient cocoa modeling"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Resilient World" }]
dependencies = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "xarray>=2024.1",
    "xee>=0.0.15",
    "zarr>=2.17",
    "dask[array]>=2024.1",
    "numpy>=1.26",
    "netcdf4>=1.6",
    "earthengine-api>=0.1.390",
    "torch>=2.1",
    "torch-geometric>=2.5",
    "pytorch-lightning>=2.1",
    "huggingface_hub>=0.24",
    "einops>=0.7",
    "timm>=1.0.11",
    "torchgeo>=0.5",
    "terratorch>=0.1",
    "mlflow>=2.10",
    "dvc>=3.0",
    "scikit-learn>=1.3",  # HistGradientBoosting + early stopping (PSM/DML)
    "scikit-survival>=0.22",  # CoxBoost-style CSSVD landscape survival model
    "joblib>=1.3",
    "pandas>=2.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "shapely>=2.0",
    "pycountry>=24.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3",
    "diskcache>=5.6",
    "h3>=4.0",
    "statsmodels>=0.14",  # event-study OLS with cluster-robust SEs
    "linearmodels>=6.0",  # PanelOLS for BJS imputation staggered DiD
    "cvxpy>=1.5",  # Synthetic DiD simplex QPs (Apache-2.0)
    "econml>=0.15",  # Honest causal forest / DR-learner CATE (MIT)
    "shap>=0.45",  # Optional CATE feature attribution
    "pooch>=1.8",
    "requests>=2.31",
    "xesmf>=0.8",
    "rpy2>=3.5; platform_system != 'Windows'",
    "segmentation-models-pytorch>=0.3",
    "structlog>=24.1",
    "pandera[pandas]>=0.20",
    "scikit-gstat>=1.0",
    "pyproj>=3.6",
    "properscoring>=0.1",
    "scoringrules>=0.5",
    "galileo @ git+https://github.com/nasaharvest/galileo@main ; python_version < '3.12'",
]

[project.optional-dependencies]
gee = [
    "geemap>=0.30",
]
# Process-based crop models: CASE2 (rpy2) + ALMANAC (subprocess; stdlib only)
process = [
    "rpy2>=3.5",
]
mlops = [
    "optuna>=3.6",
]
observability = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
]
dev = [
    "pytest>=8.0",
    "optuna>=3.6",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
    "pandas-stubs>=2.1",
    "types-PyYAML>=6.0",
    "types-shapely>=2.0",
    "scipy-stubs>=1.17.1.4",
    "types-redis>=4.6",
    "ipython>=8.0",
    "jupyter>=1.0",
    "matplotlib>=3.8",
]
# ATTRICI is GPLv3 — subprocess-only in src/; install for integration tests only
attrici = [
    "attrici @ git+https://github.com/ISI-MIP/attrici.git@v2.0.1",
]
# Fields of The World parcel delineation (subprocess CLI boundary)
ftw = [
    "ftw-tools>=2.0.0b5",
    "rasterstats>=0.20",
    "geopandas>=0.14",
]
# Upstream Galileo (Python >=3.10,<3.12 only); on 3.12+ use vendored models.vendor.*
galileo = [
    "galileo @ git+https://github.com/nasaharvest/galileo@main ; python_version < '3.12'",
]
# AgriFM Video Swin backbone (timm in core deps; weights via scripts/download_agrifm_weights.py)
agrifm = []
# TerraMind 1.0 (IBM-ESA Apache-2.0) + TiM token generation
terramind = [
    "terratorch>=1.2.4",
    "diffusers==0.30.0",
]
# CorrDiff-CMIP6 km-scale downscaling (NVIDIA Modulus / Earth2Studio, Apache-2.0)
corrdiff = [
    "nvidia-modulus[earth2studio]>=1.0",
    "nvidia-earth2studio[corrdiff]>=0.8",
]
olmoearth = [
    "transformers>=4.40",
    "safetensors>=0.4",
]
clay = [
    "transformers>=4.40",
    "safetensors>=0.4",
]
causal = [
    "ngboost>=0.5",
]
scenario_ml = [
    "xarray>=2024.1",
    "netcdf4>=1.6",
]
aurora = [
    "microsoft-aurora>=1.5",
    "huggingface_hub>=0.24",
    "peft>=0.11",
    "safetensors>=0.4",
]

# Optional extensions:
# differences>=0.2.0

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "common*",
    "data*",
    "hazards*",
    "models*",
    "api*",
    "monitoring*",
    "training*",
    "analysis*",
    "counterfactual*",
    "compliance*",
    "validation*",
    "registry*",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
exclude = ["\\.venv", "^tests/"]
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "diskcache.*",
    "h3.*",
    "redis.*",
    "zarr",
    "zarr.*",
    "xarray.*",
    "statsmodels",
    "statsmodels.*",
    "lightning.*",
    "lightning.pytorch.*",
]
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "torchgeo.*",
    "terratorch.*",
    "attrici.*",
    "ee.*",
    "earthengine.*",
    "geemap.*",
    "xee.*",
    "galileo.*",
    "segmentation_models_pytorch.*",
    "econml.*",
    "rpy2.*",
    "sklearn.*",
    "cvxpy.*",
    "linearmodels.*",
    "shap.*",
    "torch_geometric.*",
    "timm.*",
    "diffusers.*",
]
ignore_missing_imports = true

[tool.cocoa.typing]
strict_enabled = [
  "analysis._report",
  "api.config",
  "api.schemas",
  "models.conformal.cqr",
]
gradual_modules = [
  "api.causal_sensitivity",
  "api.cqr_loader",
  "api.eudr",
  "api.feature_resolver",
  "api.financial",
  "api.geo_mock",
  "api.main",
  "api.mediation",
  "api.metrics",
  "api.model_loader",
  "api.observability_middleware",
  "api.online_conformal_store",
  "api.scenario_conformal",
  "api.simulation",
  "analysis._staggered_did_common",
  "analysis.bjs_imputation",
  "analysis.climate_attribution",
  "analysis.csdid",
  "analysis.did_comparison_harness",
  "analysis.did_impact",
  "analysis.dvds",
  "analysis.heterogeneity",
  "analysis.mediation",
  "analysis.parallel_trends",
  "analysis.policy_targeting",
  "analysis.psm_matching",
  "analysis.run_evaluation",
  "analysis.sensitivity",
  "analysis.synthdid",
  "analysis.tcav",
  "analysis.validate_parallel_trends",
  "analysis.validate_smd",
  "compliance.eudr",
  "finance.insurance",
  "finance.pricing",
  "monitoring.conformal_cusum",
  "monitoring.drift_store",
  "monitoring.wctm",
  "registry.__main__",
  "registry.mlflow_pyfunc",
  "registry.mlflow_registry",
  "registry.promotion_gate",
  "validation.calibration_metrics",
  "validation.cocoa_barometer_check",
  "validation.conformal_cv",
  "validation.forecast_scoring",
  "validation.giews_drought_validation",
  "validation.icco_yield_backtest",
  "validation.kalischek_benchmark",
  "validation.run_validate",
  "validation.spatial_cv",
  "validation.temporal_cv",
  "counterfactual.ace2_era5_runner",
  "counterfactual.attrici_runner",
  "counterfactual.corrdiff_downscaler",
  "counterfactual.delta_downscaler",
  "counterfactual.neuralgcm_runner",
  "counterfactual.aurora_runner",
  "models.aurora_backbone",
  "hazards.composite",
  "hazards.cssvd_landscape",
  "training.cocoa_agrifm_datamodule",
  "training.cocoa_galileo_datamodule",
  "training.cocoa_prithvi_datamodule",
  "training.cocoa_terramind_datamodule",
  "training.hard_example_mining",
  "training.optuna_agrifm",
  "training.optuna_galileo",
  "training.optuna_yield",
  "training.train_agrifm_cocoa",
  "training.train_galileo_cocoa",
  "training.train_prithvi_cocoa",
  "training.train_terramind_cocoa",
  "training.train_yield",
  "data.attrici_fast_detrend",
  "data.cmip6_schema_index",
  "data.cocoa_dataset",
  "data.cocoa_exposure",
  "data.cssvd_landscape_features",
  "data.cssvd_strain_atlas",
  "data.dumont_supplement",
  "data.ensemble_weights",
  "data.era5_ingest",
  "data.farm_panel",
  "data.farm_panel_loader",
  "data.feature_store",
  "data.field_boundaries",
  "data.pipeline_stubs",
  "data.schemas",
  "data.sentinel_composite",
  "data.soil_ingest",
  "data.teleconnection_ingest",
  "data.utils",
  "data.yield_panel",
  "models.clay_seg",
  "models.olmoearth_seg",
  "models.backbones.aef_cocoa_head",
  "models.backbones.agrifm_backbone",
  "models.backbones.agrifm_seg",
  "models.backbones.agrifm_video_swin",
  "models.backbones.clay_backbone",
  "models.backbones.galileo_backbone",
  "models.backbones.galileo_seg",
  "models.backbones.olmoearth_backbone",
  "models.backbones.terramind_backbone",
  "models.backbones.terramind_cocoa_head",
  "models.backbones.terramind_seg",
  "models.backbones.terramind_tim",
  "models.conformal.conformal",
  "models.conformal.validate_conformal_coverage",
  "models.features.pape",
  "models.features.teleconnection_gnn",
  "models.io.galileo_features",
  "models.io.galileo_loader",
  "models.process.almanac_runner",
  "models.process.case2_runner",
  "models.process.casej_process",
  "models.process.casej_surrogate",
  "models.surrogate.cocoa_head",
  "models.surrogate.ensemble_surrogate",
  "models.surrogate.joint_exposure_yield",
  "models.surrogate.yield_surrogate",
  "models.surrogate.yield_surrogate_v2",
  "models.surrogate.yield_surrogate_v2_teleconnection",
  "models.backbones.vendor.galileo_data_utils",
  "models.backbones.vendor.single_file_galileo",
]

[[tool.mypy.overrides]]
module = [
  "api.causal_sensitivity",
  "api.cqr_loader",
  "api.eudr",
  "api.feature_resolver",
  "api.financial",
  "api.geo_mock",
  "api.main",
  "api.mediation",
  "api.metrics",
  "api.model_loader",
  "api.observability_middleware",
  "api.online_conformal_store",
  "api.scenario_conformal",
  "api.simulation",
  "analysis._staggered_did_common",
  "analysis.bjs_imputation",
  "analysis.climate_attribution",
  "analysis.csdid",
  "analysis.did_comparison_harness",
  "analysis.did_impact",
  "analysis.dvds",
  "analysis.heterogeneity",
  "analysis.mediation",
  "analysis.parallel_trends",
  "analysis.policy_targeting",
  "analysis.psm_matching",
  "analysis.run_evaluation",
  "analysis.sensitivity",
  "analysis.synthdid",
  "analysis.tcav",
  "analysis.validate_parallel_trends",
  "analysis.validate_smd",
  "compliance.eudr",
  "finance.insurance",
  "finance.pricing",
  "monitoring.conformal_cusum",
  "monitoring.drift_store",
  "monitoring.wctm",
  "registry.__main__",
  "registry.mlflow_pyfunc",
  "registry.mlflow_registry",
  "registry.promotion_gate",
  "validation.calibration_metrics",
  "validation.cocoa_barometer_check",
  "validation.conformal_cv",
  "validation.forecast_scoring",
  "validation.giews_drought_validation",
  "validation.icco_yield_backtest",
  "validation.kalischek_benchmark",
  "validation.run_validate",
  "validation.spatial_cv",
  "validation.temporal_cv",
  "counterfactual.ace2_era5_runner",
  "counterfactual.attrici_runner",
  "counterfactual.corrdiff_downscaler",
  "counterfactual.delta_downscaler",
  "counterfactual.neuralgcm_runner",
  "counterfactual.aurora_runner",
  "models.aurora_backbone",
  "hazards.composite",
  "hazards.cssvd_landscape",
  "training.cocoa_agrifm_datamodule",
  "training.cocoa_galileo_datamodule",
  "training.cocoa_prithvi_datamodule",
  "training.cocoa_terramind_datamodule",
  "training.hard_example_mining",
  "training.optuna_agrifm",
  "training.optuna_galileo",
  "training.optuna_yield",
  "training.train_agrifm_cocoa",
  "training.train_galileo_cocoa",
  "training.train_prithvi_cocoa",
  "training.train_terramind_cocoa",
  "training.train_yield",
  "data.attrici_fast_detrend",
  "data.cmip6_schema_index",
  "data.cocoa_dataset",
  "data.cocoa_exposure",
  "data.cssvd_landscape_features",
  "data.cssvd_strain_atlas",
  "data.dumont_supplement",
  "data.ensemble_weights",
  "data.era5_ingest",
  "data.farm_panel",
  "data.farm_panel_loader",
  "data.feature_store",
  "data.field_boundaries",
  "data.pipeline_stubs",
  "data.schemas",
  "data.sentinel_composite",
  "data.soil_ingest",
  "data.teleconnection_ingest",
  "data.utils",
  "data.yield_panel",
  "models.clay_seg",
  "models.olmoearth_seg",
  "models.backbones.aef_cocoa_head",
  "models.backbones.agrifm_backbone",
  "models.backbones.agrifm_seg",
  "models.backbones.agrifm_video_swin",
  "models.backbones.clay_backbone",
  "models.backbones.galileo_backbone",
  "models.backbones.galileo_seg",
  "models.backbones.olmoearth_backbone",
  "models.backbones.terramind_backbone",
  "models.backbones.terramind_cocoa_head",
  "models.backbones.terramind_seg",
  "models.backbones.terramind_tim",
  "models.conformal.conformal",
  "models.conformal.validate_conformal_coverage",
  "models.features.pape",
  "models.features.teleconnection_gnn",
  "models.io.galileo_features",
  "models.io.galileo_loader",
  "models.process.almanac_runner",
  "models.process.case2_runner",
  "models.process.casej_process",
  "models.process.casej_surrogate",
  "models.surrogate.cocoa_head",
  "models.surrogate.ensemble_surrogate",
  "models.surrogate.joint_exposure_yield",
  "models.surrogate.yield_surrogate",
  "models.surrogate.yield_surrogate_v2",
  "models.surrogate.yield_surrogate_v2_teleconnection",
  "models.backbones.vendor.galileo_data_utils",
  "models.backbones.vendor.single_file_galileo",
]
disable_error_code = [
  "misc",
  "arg-type",
  "return-value",
  "attr-defined",
  "no-any-return",
  "import-untyped",
  "import-not-found",
  "no-untyped-def",
  "no-untyped-call",
  "type-arg",
  "assignment",
  "union-attr",
  "dict-item",
  "name-defined",
  "valid-type",
  "operator",
  "call-arg",
  "untyped-decorator",
  "call-overload",
  "override",
  "index",
  "unused-ignore",
  "comparison-overlap",
]

[[tool.mypy.overrides]]
module = ["scripts.*"]
disable_error_code = [
  "misc",
  "arg-type",
  "return-value",
  "attr-defined",
  "no-any-return",
  "dict-item",
  "import-not-found",
  "import-untyped",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "N", "ANN", "SIM", "RUF"]
ignore = [
  # Ruff ratchet phase 1 — tighten in follow-up PRs (see docs/TYPING_PLAYBOOK.md)
  "ANN001",
  "ANN201",
  "ANN202",
  "ANN204",
  "ANN205",
  "ANN206",
  "ANN401",
  "N803",
  "N806",
  "N812",
  "RUF001",
  "RUF002",
  "RUF003",
  "E501",
  "E402",
  "F841",
  "SIM108",
  "SIM102",
  "SIM103",
  "B905",
  "B023",
  "B007",
  "RUF059",
  "RUF005",
  "RUF007",
  "RUF012",
  "RUF015",
  "RUF034",
  "E731",
  "N814",
  "N818",
  "N805",
  "F822",
  "F821",
  "UP028",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S101"]
"scripts/**/*.py" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that call Google Earth Engine (require credentials)",
    "aurora: Aurora 1.5 forward / cache tests (install [aurora] extra)",
    "slow: downloads Galileo weights or runs encoder forward pass",
    "slow: AgriFM Video Swin forward (depth-18 stage)",
    "terramind: TerraMind / TerraTorch registry forward or HF download",
    "gpu: CorrDiff / Earth2Studio integration (requires GPU and [corrdiff] extra)",
    "slow: DR policy tree bootstrap or simulation loops",
]
